--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,34 @@
+2002-06-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	Reformat JDBC classes and add new JDK 1.4 classes and methods.
+
+	* java/sql/ParameterMetaData.java, java/sql/SQLPermission.java,
+	java/sql/Savepoint.java: New files.
+	* java/sql/Array.java, java/sql/BatchUpdateException.java,
+	java/sql/Blob.java, java/sql/CallableStatement.java,
+	java/sql/Clob.java, java/sql/Connection.java,
+	java/sql/DataTruncation.java, java/sql/DatabaseMetaData.java,
+	java/sql/Date.java, java/sql/Driver.java, java/sql/DriverManager.java,
+	java/sql/DriverPropertyInfo.java, java/sql/PreparedStatement.java,
+	java/sql/Ref.java, java/sql/ResultSet.java,
+	java/sql/ResultSetMetaData.java, java/sql/SQLData.java
+	java/sql/SQLException.java, java/sql/SQLInput.java,
+	java/sql/SQLOutput.java, java/sql/SQLWarning.java
+	java/sql/Statement.java, java/sql/Struct.java, java/sql/Time.java,
+	java/sql/Timestamp.java, java/sql/Types.java: Updated to JDBC 3.0
+	(JDK 1.4) specification.
+	* javax/sql/ConnectionEvent.java, 
+	javax/sql/ConnectionEventListener.java,
+	javax/sql/ConnectionPoolDataSource.java,
+	javax/sql/DataSource.java, javax/sql/PooledConnection.java,
+	javax/sql/RowSetEvent.java, javax/sql/RowSetInternal.java,
+	javax/sql/RowSet.java, javax/sql/RowSetListener.java,
+	javax/sql/RowSetMetaData.java, javax/sql/RowSetReader.java,
+	javax/sql/RowSetWriter.java, javax/sql/XAConnection.java,
+	javax/sql/XADataSource.java: New files.
+	* Makefile.am: Add new files.
+	* Makefile.in: Rebuilt.
+	
 2002-06-20  Tom Tromey  <tromey@redhat.com>
 
 	For PR libgcj/7073:
