--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* tree.c (tree_node_kind, tree_node_counts, tree_node_sizes,
+	tree_node_kind_names): Wrap in GATHER_STATISTICS macro.
+
 2002-06-21  Matt Thomas  <matt@3am-software.com>
 
 	* config/vax/netbsd.h: Adjust a comment.
