--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* mangle.c (integer_type_codes): Const-ify.
+
 2002-06-20  Richard Henderson  <rth@redhat.com>
 
 	PR c++/6747
