--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* decl.c (clear_binding_level): Const-ify.
+
 2002-06-13  Akim Demaille  <akim@epita.fr>
 
 	* parse.y (class_declaration, interface_declaration): Make sure
