* cpptrad.c (struct fun_macro): Add line number. 	(scan_out_logical_line): Set it, and use it to report unterminated 	macro invocations. testsuite: 	* gcc.dg/cpp/trad/comment-2.c. gcc.dg/cpp/trad/funlike-2.c, 	gcc.dg/cpp/trad/funlike.c, gcc.dg/cpp/trad/funlike-3.c, 	gcc.dg/cpp/trad/literals-1.c, gcc.dg/cpp/trad/literals-2.c, 	gcc.dg/cpp/trad/macroargs.c, gcc.dg/cpp/trad/quote.c: New tests.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54907 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-22  Neil Booth  <neil@daikokuya.co.uk>
+
+	* cpptrad.c (struct fun_macro): Add line number.
+	(scan_out_logical_line): Set it, and use it to report unterminated
+	macro invocations.
+
 2002-06-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* genautomata.c (copy_node, VLA_PTR_CREATE, VLA_PTR_EXPAND,
