--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-06-22  David S. Miller  <davem@redhat.com>
+
+	PR target/6841 target/6770 target/6719
+	* config/sparc/sparc.h (PREFERRED_RELOAD_CLASS): Return
+	NO_REGS	for constant X when CLASS is GENERAL_OR_FP_REGS or
+	GENERAL_OR_EXTRA_FP_REGS.
+
 2002-06-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/sparc/t-crtfm (crtfastmath.o): Prefix with $(T) for
