--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-22  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	PR middle-end/6963
+	* function.c (assign_stack_temp_for_type): Do not return
+	the same MEM rtx for multiple uses of a stack slot.
+
 2002-06-22  David S. Miller  <davem@redhat.com>
 
 	PR target/6841 target/6770 target/6719
