--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 20 00:35:14 2002  Denis Chertykov  <denisc@overta.ru>
+
+	* configure.in: Add support for ip2k.
+
 2002-06-22  Nathanael Nerode  <neroden@twcny.rr.com>
 
 	* configure.in: Fix AIX configury bug.
