--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-23  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am ($(srcdir)/java/lang/Object.h,
+	$(srcdir)/java/lang/Class.h): Added dummy targets.
+
 2002-06-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* configure.host: Disable hash synchronization and slow_pthread_self
