--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-24  Alan Modra  <amodra@bigpond.net.au>
+
+	* doloop.c (doloop_valid_p): Correct comment.
+	(doloop_modify_runtime <abs_inc != 1>): Simplify.
+	(doloop_modify_runtime <do-while>): Don't emit code when NE.
+
 Thu Jun 20 00:26:53 2002  Denis Chertykov  <denisc@overta.ru>
 
 	* config.gcc: Add support for ip2k.
