* configure: Rebuilt. 	* configure.in (INTERPRETER): New subst. 	(AM_RUNTESTFLAGS): Don't subst.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54940 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-06-23  Tom Tromey  <tromey@redhat.com>
 
+	* configure: Rebuilt.
+	* configure.in (INTERPRETER): New subst.
+	(AM_RUNTESTFLAGS): Don't subst.
+
 	* Makefile.in: Rebuilt.
 	* Makefile.am ($(srcdir)/java/lang/Object.h,
 	$(srcdir)/java/lang/Class.h): Added dummy targets.
