--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-24  David S. Miller  <davem@redhat.com>
+
+	* config/sparc/sparc.c (INIT_TARGET_OPTABS): If ARCH64, set the
+	32-bit ABI libfuncs to NULL.
+
+	* expmed.c (expand_divmod): Do not set optab1/optab2 to the shift
+	optabs if op1 is const0_rtx.
+
 2002-06-24  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cpptrad.c (scan_out_logical_line): Check recursing only when
