2002-06-24  David S. Miller  <davem@redhat.com>
	* config/sparc/sparc.c (INIT_TARGET_OPTABS): If ARCH64, set the
	32-bit ABI libfuncs to NULL.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54952 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,7 +3,8 @@
 	* config/sparc/sparc.c (INIT_TARGET_OPTABS): If ARCH64, set the
 	32-bit ABI libfuncs to NULL.
 
-	* config/sparc/sparc.md: Use define_insn_and_split.
+	* config/sparc/sparc.md: Use define_insn_and_split.  Use braced
+	strings instead of quoted strings for code blocks.
 
 	* expmed.c (expand_divmod): Do not set optab1/optab2 to the shift
 	optabs if op1 is const0_rtx.
